# rust-pdf

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  WALKTHROUGH.md  build.rs
examples/: generate_pdf.rs  grpc_client_test.rs  test_90_percent_compression.rs  test_compression.rs
proto/: compression.proto
src/: lib.rs  main.rs
src/api/: mod.rs
src/compression/: mod.rs
src/grpc/: mod.rs
