[package]
name = "rustpdf"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["multipart", "macros"] }
tonic = "0.12"
prost = "0.13"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
lopdf = "0.33"
image = "0.25"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["limit", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10" # For parallel image processing

[build-dependencies]
tonic-build = "0.12"
